Font fix and overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,8 @@ a {
 -webkit-transition:all .35s;
 -moz-transition:all .35s;
 transition:all .35s;
-color:#fdcc52
+color:#fdcc52;
+font-size: 8px;
 }
 a:focus, a:hover {
 color:#fcbd20
@@ -44,21 +45,22 @@ border-color:rgba(34,34,34,.1)
 hr.light {
 border-color:#fff
 }
-p {
+project-title {
 font-size:18px;
 line-height:1.5;
 margin-bottom:20px
 }
 .navbar-default {
 background-color:#fff;
+opacity:0.5;
 border-color:rgba(34,34,34,.05);
 -webkit-transition:all .35s;
 -moz-transition:all .35s;
 transition:all .35s;
-
 }
 .navbar-default .navbar-header .navbar-brand {
-color:#fdcc52
+color:#fdcc52;
+font-size: 12px;
 }
 .btn, .navbar-default .nav>li>a {
 font-family:Inconsolata, sans-serif;
@@ -66,8 +68,8 @@ text-transform:uppercase;
 letter-spacing:2px
 }
 .navbar-default .navbar-header .navbar-brand:focus, .navbar-default .navbar-header .navbar-brand:hover {
-color:#fcbd20
-
+color:#fcbd20;
+font-size: 12px;
 }
 .navbar-default .navbar-header .navbar-toggle {
 font-size:12px;
